# chimp-ai-nzee

./: .gitignore  LICENSE  README.md  demo.py  eval.py  pyproject.toml  train.py
agents/: __init__.py  agent.py  baselines.py
envs/: __init__.py  chimp_env.py  chimp_experiment.py
