[tool.poetry]
name = "chimp-ai-nzee"
version = "0.0.1"
description = "Recreation of Theory of Mind experiment done on chimpanzees as an RL environment"
authors = ["Allan Reyes <allan_bassail@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycolab = "^1.2"
gym = "0.21.0"
stable-baselines3 = "^1.6.0"
tensorboard = "^2.10.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.1"
imageio = "^2.22.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
autohooks = "^22.8.1"
autohooks-plugin-pylint = "^22.8.1"
autohooks-plugin-black = "^22.8.1"
autohooks-plugin-isort = "^22.8.0"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort", "autohooks.plugins.pylint"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.format]
max-line-length=120

[tool.pylint.messages_control]
disable=["missing-module-docstring", "too-few-public-methods", "too-many-arguments", "too-many-locals", "fixme"]

[tool.pylint.typecheck]
generated-members=["numpy.*", "torch.*"]
extension-pkg-allow-list=["math", "pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
